03-advanced_authentication/openshift/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: rhbk
spec:
  host: REPLACE_WITH_KEYCLOAK_HOSTNAME
  to:
    kind: Service
    name: keycloak-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
